# optcarrot

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  build_valgrind.sh  generate_cmake.sh  main.cpp  run.sh  suppressions.txt
.github/: .gitkeep
cmake/: CompileOptions.cmake  DoClangTidy.cmake  EnableCcache.cmake  EnableMeasureTime.cmake  FormatFilesWithClangFormat.cmake
include/: optcarrot.h
include/optcarrot/: APU.h  CPU.h  Config.h  Driver.h  NES.h  PPU.h  Pads.h  Palette.h  ROM.h  config.h  driver.h  nes.h
include/optcarrot/Driver/: Audio.h  SDL2.h  SDL2Audio.h  SDL2Video.h  Video.h
source/: optcarrot.cpp
source/optcarrot/: APU.cpp  CPU.cpp  NES.cpp  PPU.cpp  Pads.cpp  ROM.cpp  nes.cpp
source/optcarrot/Driver/: Audio.cpp  SDL2.cpp  SDL2Audio.cpp  SDL2Video.cpp  Video.cpp
tools/: dump_nes.py  r2c.sh
